--- a/html/about.html
+++ b/html/about.html
@@ -40,10 +40,10 @@
                 <div class="team-card">
                     <img id="lelia" src="../image/lelia.jpg" alt="Lélia GHEZALI">
                     <h3 id="lelia_h3">Lélia GHEZALI</h3>
-                    <p><strong>Role:</strong> I did some things i think eheh.</p>
-                    <p class="bio">I'm a passionate second-year student at EFREI, and I love building creative digital
+                    <p><strong>Role:</strong> I was in charge of making the Earth life and Sea life pages. I also made this about page and finally the pages for the Earth life animals.</p>
+                    <p class="bio">As a second-year student at EFREI, I love building creative digital
                         projects that are both functional and meaningful. This is why, this project was particularly fun
-                        as it allowed creativity but still thaught me a lot. </p>
+                        as it allowed creativity but still thaught me a lot about endengered animals. </p>
                 </div>
 
                 <div class="team-card">
@@ -58,10 +58,12 @@
         <section class="closing">
             <h2>Final thoughts</h2>
             <p>
-                We’re proud of what we accomplished together and grateful for the opportunity to create something from
-                scratch. This project taught us valuable technical and teamwork skills.
+                We are quite proud of what we accomplished together for this project and are grateful for the opportunity to create this website by ourselves from
+                scratch. Thanks to it, we were taught valuable technical and teamwork skills that we know will be useful for our future.
                 <br><br>
                 Thank you for exploring our site :)
+                <br><br>
+                <u>Link to the Github repository:</u> <a href="https://github.com/Lipotani77/EveryDayLife.git">EveryDayLife</a>
             </p>
         </section>
 
