fix the header for mobile

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <title>Everyday life</title>
     <link rel="stylesheet" href="../css/index.css">
     <link class="tabIcon" rel="icon" type="image/x-icon" href="../image/logo.png">
-</head>
+</head> 
 
 
 <body>
@@ -103,7 +103,7 @@
                                 <img class="pins" src="../image/pinsPNG.png" alt="red pin">
                             </a>
 
-                            <div id="info-box-A3" class="pin-info-box">
+                            <div id="info-box-A4" class="pin-info-box">
                                 <a href="Animals_and_Quiz/turtle.html">
                                     <img src="../image/Animals/Roti-Island-snake-necked-turtle.png"><br>
                                 </a>
@@ -112,7 +112,7 @@
 
                     </div>
 
-                    <h1>Let's explore the world !</h1>
+                    <h1 id="modalText">Let's explore the world !</h1>
 
                     <img src="../image/exploration.png" alt="Exploration characters" id="ExplorationImg">
 
