added the description for me and a little fix for the git link

--- a/html/about.html
+++ b/html/about.html
@@ -40,7 +40,8 @@
                 <div class="team-card">
                     <img id="lelia" src="../image/lelia.jpg" alt="Lélia GHEZALI">
                     <h3 id="lelia_h3">Lélia GHEZALI</h3>
-                    <p><strong>Role:</strong> I was in charge of making the Earth life and Sea life pages. I also made this about page and finally the pages for the Earth life animals.</p>
+                    <p><strong>Role:</strong> I was in charge of making the Earth life and Sea life pages. I also made
+                        this about page and finally the pages for the Earth life animals.</p>
                     <p class="bio">As a second-year student at EFREI, I love building creative digital
                         projects that are both functional and meaningful. This is why, this project was particularly fun
                         as it allowed creativity but still thaught me a lot about endengered animals. </p>
@@ -49,8 +50,12 @@
                 <div class="team-card">
                     <img id="killian" src="../image/Killian.jpg" alt="Killian KOULOURATH">
                     <h3 id="killian_h3">Killian KOULOURATH</h3>
-                    <p><strong>Role:</strong> He also did a lot of things eheh.</p>
-                    <p class="bio">I’m a good guy, pouce bleu, oe tkt.</p>
+                    <p><strong>Role:</strong> I was in charge of making the home page which was kind of difficult. I
+                        also made the the pages for the Sea life animal</p>
+                    <p class="bio">As a second-year student at EFREI, I enjoy combining creativity with real-world
+                        impact. That's why I really enjoyed working on this project — it gave me the freedom to design
+                        something visually engaging while learning more about endangered animals and raising awareness
+                        in the process.</p>
                 </div>
             </div>
         </section>
@@ -58,12 +63,15 @@
         <section class="closing">
             <h2>Final thoughts</h2>
             <p>
-                We are quite proud of what we accomplished together for this project and are grateful for the opportunity to create this website by ourselves from
-                scratch. Thanks to it, we were taught valuable technical and teamwork skills that we know will be useful for our future.
+                We are quite proud of what we accomplished together for this project and are grateful for the
+                opportunity to create this website by ourselves from
+                scratch. Thanks to it, we were taught valuable technical and teamwork skills that we know will be useful
+                for our future.
                 <br><br>
                 Thank you for exploring our site :)
                 <br><br>
-                <u>Link to the Github repository:</u> <a href="https://github.com/Lipotani77/EveryDayLife.git">EveryDayLife</a>
+                <u>Link to the Github repository:</u>
+                <a id="Gitlink" href="https://github.com/Lipotani77/EveryDayLife.git">EveryDayLife</a>
             </p>
         </section>
 
